<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginPage"
    >
    <!-- Layer 1 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_page_layer1_back"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/burger_1"
            android:layout_gravity="center_vertical"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/montserrat"
            android:letterSpacing="0.12"
            android:text="@string/login_page_layer1_text1"
            android:textColor="@color/white"
            android:textSize="36dp" />
    </LinearLayout>
    <!-- Layer 2 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="520dp"
        android:background="@drawable/lgoin_page_layer2_bg_image"
        android:paddingHorizontal="28dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="44dp"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_page_layer2_text1"
                android:textSize="30dp"
                android:fontFamily="@font/montserrat_semibold"
                android:letterSpacing="0.12"
                android:textColor="@color/black"
                />
            <EditText
                android:layout_marginVertical="10dp"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/rounded_edittext"
                android:hint="username"
                android:paddingHorizontal="16dp"
                android:inputType="text"
                android:fontFamily="@font/montserrat_semibold"
                android:textColor="#2E3A59"
                android:text="@string/edit_text1"
                android:imeOptions="actionNext"
                />
            <EditText
                android:layout_marginVertical="10dp"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/edittext2"
                android:hint="Enter your password"
                android:paddingHorizontal="16dp"
                android:inputType="textPassword"
                android:fontFamily="@font/montserrat_semibold"
                android:textColor="#343434"
                android:imeOptions="actionNext"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:fontFamily="@font/montserrat_semibold"
                android:layout_marginVertical="4dp"
                android:textSize="16dp"
                android:letterSpacing="0.04"
                android:textColor="#6D6D6D"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_text"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat_semibold"
                android:textSize="22dp"
                android:letterSpacing="0.16"
                android:background="@drawable/button_style"
                android:layout_marginTop="25dp"
                />
        </LinearLayout>
    </LinearLayout>
    <!-- Layer 3 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/layer3_text1"
            android:textColor="#6D6D6D"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="16sp"
            android:gravity="center_horizontal"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layer3_text2"
                android:textColor="#0072C5"
                android:fontFamily="@font/montserrat_semibold"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_gravity="center"
                />
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/circle_chevron_right"
                android:layout_gravity="center"
                />
        </LinearLayout>


    </LinearLayout>



</LinearLayout>